add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://folks.netlify.app/" />
     <meta property="og:title" content="Folks" />
-    <meta property="og:description" content="" />
+    <meta
+      property="og:description"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+    />
     <meta
       property="og:image"
       content="https://folks.netlify.app/assets/previews/meta-preview.png"
@@ -28,7 +31,10 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://folks.netlify.app/" />
     <meta property="twitter:title" content="Folks" />
-    <meta property="twitter:description" content="" />
+    <meta
+      property="twitter:description"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+    />
     <meta
       property="twitter:image"
       content="https://folks.netlify.app/assets/previews/meta-preview.png"
@@ -41,7 +47,10 @@
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Folks" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
