refactor: for to to

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Folks" />
     <meta
       property="og:description"
-      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are to you! 🫂"
     />
     <meta
       property="og:image"
@@ -33,7 +33,7 @@
     <meta property="twitter:title" content="Folks" />
     <meta
       property="twitter:description"
-      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are to you! 🫂"
     />
     <meta
       property="twitter:image"
@@ -49,7 +49,7 @@
     <meta name="title" content="Folks" />
     <meta
       name="description"
-      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂"
+      content="Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are to you! 🫂"
     />
   </head>
   <body>
